# Chronos

./: .gitignore  README.md  index.html  package-lock.json  package.json  start.ps1  tsconfig.json  vite.config.ts
engine/: main.py  pyproject.toml
engine/benchmark/: __init__.py  evaluator.py  run_eval.py  targets.py
engine/benchmark/fixtures/: contradiction_entries.json  contradiction_labels.json  demo_entries.json  demo_labels.json  intensity_entries.json  (+4 more)
engine/context/: __init__.py  align_engine.py  geocoder.py  import_cli.py  rhythm_tagger.py  weather_cli.py  weather_client.py
engine/llm/: ollama_client.py
engine/pipeline/: anchor_detector.py  artifacts.py  cancel_registry.py  chain_link_builder.py  checkpoint.py  context_ingest.py  controlled_factors.py  emotion_analyzer.py  factor_analyzer.py  interaction_analyzer.py  language_analyzer.py  morph_classifier.py  network_analyzer.py  physio_coupling.py  problem_narrative_detector.py  reframe_dialogue.py  report_builder.py  runner.py  selves_analyzer.py  space_emotion.py  steps.py  story_builder.py  theme_analyzer.py  warning_detector.py  weather_insights.py  weather_sensitivity.py
engine/schemas/: __init__.py  models.py
engine/tests/: test_anchor_detector.py  test_benchmark.py  test_checkpoint.py  test_confidence.py  test_geo_cluster.py  test_morph_classifier.py  test_person_names.py  test_pipeline_smoke.py  test_theme_analyzer.py  test_theme_bertopic.py  test_warning_benchmark.py  test_weather_insights.py
engine/utils/: baseline.py  confidence.py  geo_cluster.py  interpretation.py  person_names.py
(+62 files in other folders)
