[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-engine"
version = "0.1.0"
description = "Chronos analysis engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "networkx>=3.4.0",
    "jieba>=0.42.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*", "pipeline*", "llm*", "utils*"]
